--- a/css/common.css
+++ b/css/common.css
@@ -4,11 +4,26 @@
 
 body {
   margin: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
+}
+
+.gallery {
+  list-style-type: none;
+  padding: 0;
+}
+
+.gallery li {
+  margin-bottom: 10px;
+}
+
+.gallery img {
+  width: 100%;
+  height: auto;
+  display: block;
 }
